Fix utils overlap

--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ body {
 	justify-content: space-between;
 	gap: 11px;
 	flex-shrink: 1;
-	width: 100%;
+	width: 140%;
 	height: 100%;
 }
 
